--- a/public/html/index.html
+++ b/public/html/index.html
@@ -145,9 +145,10 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact</h2>
-                <a href="tel:7209333458" class="btn btn-circle circle page-scroll intro-space"><span class="glyphicon glyphicon-earphone"></span></a>
+                <p>(844) OIL-BRED </p>
+                <a href="tel:84464527733" class="btn btn-circle circle page-scroll intro-space"><span class="glyphicon glyphicon-earphone"></span><br>
                 
-                <a href="mailto:theleague.denver@gmail.com" class="btn btn-circle circle page-scroll intro-space"><span class="glyphicon glyphicon-envelope"></span></a>
+                <a href="mailto: info@thoroughbredpetroleum.com" class="btn btn-circle circle page-scroll intro-space"><span class="glyphicon glyphicon-envelope"></span></a><p>info@thoroughbredpetroleum.com</p>
                
             </div>
         </div>
