--- a/public/html/index.html
+++ b/public/html/index.html
@@ -60,7 +60,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading logo"><img src="../images/logo.jpg"></h1>
                         <p class="intro-text">Direct Investments | Passive Returns</p> <br><br>
-                        <p class="intro-text"><q>Project Focused Acquisitions of Proven Oil &amp Gas Assets.</q></p>
+                        <p class="intro-text"><q>Project Focused Acquisitions of Proven Oil &amp Gas Assets</q></p>
                         <a href="#about" class="btn btn-circle page-scroll intro-space">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
