never make me do a website in an hour

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -75,7 +75,7 @@
          <div class="about-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>About This</h2>
+                    <h2>About</h2>
                     <p>Our opportunities focus on acquiring assets that possess steady revenue with development upside potential &amp volatile lifting costs with opportunity for technical production optimization.</p>
                     <p>We have developed a method of consistently hunting and finding assets that meet our opportunity criteria, so that investors can keep their funds active in our playbook. The steady revenue of low decline assets we seek out provides security of investment and stability of cash flow for investors while the existing infill and re-entry development opportunities offer solid upside rewards. Volatile lifting costs provide  us with the technical optimization potential of assets found to have non-technical historical operations; high overhead associated with non-core assets found to have had more technical historical operations offer potential for our production cost optimization. These types of typical production &amp operation inefficiencies provide a niche for our unique project-focused acquisition opportunities. We provide technical management, so investors don't have to spend time and money on projects they fund. For this reason, we offer consistent value and opportunity for both technical and non-technical investors to be directly involved with oil and gas production.</p>
                 </div>
