--- a/public/html/index.html
+++ b/public/html/index.html
@@ -157,7 +157,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Thouroughbred Petroleum Investments 2016</p>
+            <p>Copyright &copy; Thoroughbred Petroleum Investments 2016</p>
         </div>
     </footer>
 
